# ZapMe-Frontend

./: .env  .env.development  .env.production  .eslintignore  .eslintrc  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Frontend.esproj  README.md  SECURITY.md  api.yaml  index.html  openapitools.json  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  sentry.properties  svelte.config.js  svelte.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: build-artifact.yml  build-release.yml  test-dev.yml
.svelte-kit/: tsconfig.json
api/: openapi.yaml
playwright-report/: index.html
public/: global.css  index.html  manifest.json
scripts/: cleanOpenApiFile.js  favicon-packer.js
src/: App.svelte  ThemeContext.ts  ambient.d.ts  app.css  app.d.ts  app.html  app.postcss  error.html  global.css  hooks.client.ts  hooks.server.ts  index.tsx  main.ts  persistentWritable.ts  service-worker.ts  stores.ts
src/Api/: .gitignore
src/Components/: index.tsx
src/Layouts/: index.tsx
src/Pages/: index.tsx
src/Routes/: App.tsx
src/Utils/: Validators.ts
src/api/: ApiError.ts  account.ts  authentication.ts
src/components/: CenteredRect.svelte  CountdownText.svelte  Fidget.svelte  Footer.svelte  Form.svelte  FormButton.svelte  Gallery.svelte  GiphySearch.svelte  Header.svelte  LoadingWidget.svelte  Markdown.svelte  NamedCheckBox.svelte  (+15 more)
static/: global.css
tests/: Footer.test.ts
wasm/: .gitignore  Cargo.toml
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
wasm/src/: lib.rs
(+445 files in other folders)
