[package]
name = "wasm-lib"
version = "0.1.0"
description = "WebAssembly library for ZapMe website"
authors = ["HentaiHeavenVR"]
repository = "https://github.com/HentaiHeavenVR/ZapMe"
license = "MIT"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"

[profile.release]
opt-level = 's'
lto = true