# See https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly library for ZapMe website"
authors = ["HentaiHeavenVR"]
repository = "https://github.com/HentaiHeavenVR/ZapMe"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-test = "0.3.33"

[profile.release]
opt-level = 's'
strip = true
lto = true